// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AgentBadge — snapshots > matches snapshot: active badge with dot 1`] = `"<v-chip data-v-0937c3c8="" size="x-small" variant="outlined" style="color: rgb(78, 52, 46); border-color: rgb(188, 170, 164); background-color: rgb(215, 204, 200);" title="review-master" class="agent-chip"><span data-v-0937c3c8="" class="activity-dot"></span><span data-v-0937c3c8="" class="badge-name">review-master</span></v-chip>"`;

exports[`AgentBadge — snapshots > matches snapshot: inactive badge 1`] = `
"<v-chip data-v-0937c3c8="" size="x-small" variant="outlined" style="color: rgb(78, 52, 46); border-color: rgb(188, 170, 164); background-color: rgb(215, 204, 200);" title="dev-front-vuejs" class="agent-chip">
  <!--v-if--><span data-v-0937c3c8="" class="badge-name">dev-front-vuejs</span>
</v-chip>"
`;

exports[`ConfirmDialog — snapshots > matches snapshot: danger dialog 1`] = `
"<v-dialog data-v-ba1b5c38="" model-value="true" max-width="420" persistent="">
  <v-card data-v-ba1b5c38="" elevation="3" role="alertdialog" aria-modal="true" aria-label="Delete agent?">
    <!-- Header with icon -->
    <v-card-text data-v-ba1b5c38="" class="pa-5 pb-3">
      <div data-v-ba1b5c38="" class="d-flex align-start ga-3">
        <!-- Icon wrapper -->
        <div data-v-ba1b5c38="" class="icon-wrapper d-flex align-center justify-center icon-danger">
          <!-- Danger icon -->
          <v-icon data-v-ba1b5c38="" class="icon-svg icon-svg--danger" size="20">mdi-alert-circle-outline</v-icon>
        </div>
        <div data-v-ba1b5c38="" class="flex-grow-1 content-text">
          <h3 data-v-ba1b5c38="" class="text-subtitle-2 font-weight-medium">Delete agent?</h3>
          <p data-v-ba1b5c38="" class="text-body-2 text-medium-emphasis mt-2">This action is irreversible.</p>
          <!--v-if-->
        </div>
      </div>
    </v-card-text><!-- Actions -->
    <v-card-actions data-v-ba1b5c38="" class="px-5 py-4 actions-border">
      <v-spacer data-v-ba1b5c38=""></v-spacer>
      <v-btn data-v-ba1b5c38="" variant="text">Cancel</v-btn>
      <v-btn data-v-ba1b5c38="" color="error" variant="flat">Delete</v-btn>
    </v-card-actions>
  </v-card>
</v-dialog>"
`;

exports[`ConfirmDialog — snapshots > matches snapshot: info dialog 1`] = `
"<v-dialog data-v-ba1b5c38="" model-value="true" max-width="420" persistent="">
  <v-card data-v-ba1b5c38="" elevation="3" role="alertdialog" aria-modal="true" aria-label="Confirm action?">
    <!-- Header with icon -->
    <v-card-text data-v-ba1b5c38="" class="pa-5 pb-3">
      <div data-v-ba1b5c38="" class="d-flex align-start ga-3">
        <!-- Icon wrapper -->
        <div data-v-ba1b5c38="" class="icon-wrapper d-flex align-center justify-center icon-info">
          <!-- Danger icon -->
          <!-- Info icon -->
          <v-icon data-v-ba1b5c38="" class="icon-svg icon-svg--info" size="20">mdi-information-outline</v-icon>
        </div>
        <div data-v-ba1b5c38="" class="flex-grow-1 content-text">
          <h3 data-v-ba1b5c38="" class="text-subtitle-2 font-weight-medium">Confirm action?</h3>
          <p data-v-ba1b5c38="" class="text-body-2 text-medium-emphasis mt-2">Do you want to proceed?</p>
          <!--v-if-->
        </div>
      </div>
    </v-card-text><!-- Actions -->
    <v-card-actions data-v-ba1b5c38="" class="px-5 py-4 actions-border">
      <v-spacer data-v-ba1b5c38=""></v-spacer>
      <v-btn data-v-ba1b5c38="" variant="text">Cancel</v-btn>
      <v-btn data-v-ba1b5c38="" color="primary" variant="flat">OK</v-btn>
    </v-card-actions>
  </v-card>
</v-dialog>"
`;

exports[`ContextMenu — snapshots > matches snapshot: items with separator 1`] = `
"<v-menu model-value="true" target="50,80" close-on-content-click="false">
  <v-list density="compact" min-width="188">
    <v-list-item title="Edit"></v-list-item>
    <v-list-item title="Add subgroup"></v-list-item>
    <v-divider></v-divider>
    <v-list-item title="Delete"></v-list-item>
  </v-list>
</v-menu>"
`;

exports[`ContextMenu — snapshots > matches snapshot: simple items (no separator) 1`] = `
"<v-menu model-value="true" target="100,200" close-on-content-click="false">
  <v-list density="compact" min-width="188">
    <v-list-item title="Rename"></v-list-item>
    <v-list-item title="Delete"></v-list-item>
  </v-list>
</v-menu>"
`;

exports[`DbSelector — snapshots > matches snapshot: home screen (no project selected) 1`] = `
"<!-- Accueil -->
<div data-v-2585d2c8="" class="screen-center">
  <div data-v-2585d2c8="" class="home-content ga-6 px-6">
    <!-- Logo -->
    <v-avatar data-v-2585d2c8="" size="56" color="primary-container" class="logo-avatar">
      <v-icon data-v-2585d2c8="" size="28" color="on-primary-container">mdi-shield-check</v-icon>
    </v-avatar>
    <div data-v-2585d2c8="" class="home-titles ga-1">
      <h2 data-v-2585d2c8="" class="app-name text-h6">KanbAgent</h2>
      <p data-v-2585d2c8="" class="app-tagline text-body-2">Visualisez les tâches de vos agents en temps réel.</p>
    </div><!-- 2 options -->
    <div data-v-2585d2c8="" class="action-grid ga-3">
      <!-- Ouvrir existant -->
      <v-card data-v-2585d2c8="" variant="outlined" class="action-card pa-4">
        <div data-v-2585d2c8="" class="action-card-inner ga-2">
          <div data-v-2585d2c8="" class="action-icon-wrap">
            <v-icon data-v-2585d2c8="" class="action-icon" size="20">mdi-folder-outline</v-icon>
          </div>
          <div data-v-2585d2c8="">
            <p data-v-2585d2c8="" class="action-label text-body-2">Ouvrir</p>
            <p data-v-2585d2c8="" class="action-sublabel text-caption">Projet existant</p>
          </div>
        </div>
      </v-card><!-- Créer nouveau -->
      <v-card data-v-2585d2c8="" variant="outlined" class="action-card action-card--primary pa-4">
        <div data-v-2585d2c8="" class="action-card-inner ga-2">
          <div data-v-2585d2c8="" class="action-icon-wrap action-icon-wrap--primary">
            <v-icon data-v-2585d2c8="" class="action-icon action-icon--primary" size="20">mdi-plus</v-icon>
          </div>
          <div data-v-2585d2c8="">
            <p data-v-2585d2c8="" class="action-label action-label--primary text-body-2">Créer</p>
            <p data-v-2585d2c8="" class="action-sublabel text-caption">Nouveau projet</p>
          </div>
        </div>
      </v-card>
    </div>
    <!--v-if-->
    <!-- Language selector -->
    <div data-v-2585d2c8="" class="lang-row">
      <v-select data-v-2585d2c8="" model-value="fr" items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]" item-title="label" item-value="code" density="compact" variant="outlined" hide-details="" aria-label="Language" style="max-width: 220px;"></v-select>
    </div>
  </div>
</div>"
`;

exports[`DbSelector — snapshots > matches snapshot: home screen with error 1`] = `
"<!-- Accueil -->
<div data-v-2585d2c8="" class="screen-center">
  <div data-v-2585d2c8="" class="home-content ga-6 px-6">
    <!-- Logo -->
    <v-avatar data-v-2585d2c8="" size="56" color="primary-container" class="logo-avatar">
      <v-icon data-v-2585d2c8="" size="28" color="on-primary-container">mdi-shield-check</v-icon>
    </v-avatar>
    <div data-v-2585d2c8="" class="home-titles ga-1">
      <h2 data-v-2585d2c8="" class="app-name text-h6">KanbAgent</h2>
      <p data-v-2585d2c8="" class="app-tagline text-body-2">Visualisez les tâches de vos agents en temps réel.</p>
    </div><!-- 2 options -->
    <div data-v-2585d2c8="" class="action-grid ga-3">
      <!-- Ouvrir existant -->
      <v-card data-v-2585d2c8="" variant="outlined" class="action-card pa-4">
        <div data-v-2585d2c8="" class="action-card-inner ga-2">
          <div data-v-2585d2c8="" class="action-icon-wrap">
            <v-icon data-v-2585d2c8="" class="action-icon" size="20">mdi-folder-outline</v-icon>
          </div>
          <div data-v-2585d2c8="">
            <p data-v-2585d2c8="" class="action-label text-body-2">Ouvrir</p>
            <p data-v-2585d2c8="" class="action-sublabel text-caption">Projet existant</p>
          </div>
        </div>
      </v-card><!-- Créer nouveau -->
      <v-card data-v-2585d2c8="" variant="outlined" class="action-card action-card--primary pa-4">
        <div data-v-2585d2c8="" class="action-card-inner ga-2">
          <div data-v-2585d2c8="" class="action-icon-wrap action-icon-wrap--primary">
            <v-icon data-v-2585d2c8="" class="action-icon action-icon--primary" size="20">mdi-plus</v-icon>
          </div>
          <div data-v-2585d2c8="">
            <p data-v-2585d2c8="" class="action-label action-label--primary text-body-2">Créer</p>
            <p data-v-2585d2c8="" class="action-sublabel text-caption">Nouveau projet</p>
          </div>
        </div>
      </v-card>
    </div>
    <p data-v-2585d2c8="" class="error-msg py-2 px-3 text-caption">DB not found</p><!-- Language selector -->
    <div data-v-2585d2c8="" class="lang-row">
      <v-select data-v-2585d2c8="" model-value="fr" items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]" item-title="label" item-value="code" density="compact" variant="outlined" hide-details="" aria-label="Language" style="max-width: 220px;"></v-select>
    </div>
  </div>
</div>"
`;

exports[`StatusColumn — snapshots > matches snapshot: column with 2 tasks 1`] = `
"<div data-v-b539d429="" class="column-wrap">
  <div data-v-b539d429="" class="column-header">
    <div data-v-b539d429="" class="column-title-row ga-2">
      <div data-v-b539d429="" class="column-accent" style="background-color: rgb(148, 163, 184);"></div><span data-v-b539d429="" class="column-title text-caption">Todo</span>
    </div><span data-v-b539d429="" class="column-count text-caption">2</span>
  </div>
  <div data-v-b539d429="" class="column-body pa-2 ga-2">
    <task-card-stub data-v-b539d429="" task="[object Object]"></task-card-stub>
    <task-card-stub data-v-b539d429="" task="[object Object]"></task-card-stub>
    <!--v-if-->
  </div>
</div>"
`;

exports[`StatusColumn — snapshots > matches snapshot: empty column 1`] = `
"<div data-v-b539d429="" class="column-wrap">
  <div data-v-b539d429="" class="column-header">
    <div data-v-b539d429="" class="column-title-row ga-2">
      <div data-v-b539d429="" class="column-accent" style="background-color: rgb(148, 163, 184);"></div><span data-v-b539d429="" class="column-title text-caption">Todo</span>
    </div><span data-v-b539d429="" class="column-count text-caption">0</span>
  </div>
  <div data-v-b539d429="" class="column-body pa-2 ga-2">
    <div data-v-b539d429="" class="column-empty py-8 text-caption">Aucune tâche</div>
  </div>
</div>"
`;

exports[`StatusColumn — snapshots > matches snapshot: in_progress column (drop target) 1`] = `
"<div data-v-b539d429="" class="column-wrap">
  <div data-v-b539d429="" class="column-header">
    <div data-v-b539d429="" class="column-title-row ga-2">
      <div data-v-b539d429="" class="column-accent" style="background-color: rgb(34, 211, 238);"></div><span data-v-b539d429="" class="column-title text-caption">In Progress</span>
    </div><span data-v-b539d429="" class="column-count text-caption">1</span>
  </div>
  <div data-v-b539d429="" class="column-body pa-2 ga-2">
    <task-card-stub data-v-b539d429="" task="[object Object]"></task-card-stub>
    <!--v-if-->
  </div>
</div>"
`;

exports[`TabBar — snapshots > matches snapshot: empty tab bar (no tabs) 1`] = `
"<div data-v-3c3dc65a="" class="tabbar">
  <!-- Fixed tabs: Backlog + Dashboard — MD3 Secondary Tabs with Vuetify ripple -->
  <v-tabs data-v-3c3dc65a="" density="compact" height="48" color="primary" class="tabbar-fixed-tabs">
    <v-tab data-v-3c3dc65a="" value="backlog">
      <v-icon data-v-3c3dc65a="" size="14" class="mr-2">mdi-view-list</v-icon> Backlog
    </v-tab>
    <v-tab data-v-3c3dc65a="" value="dashboard">
      <v-icon data-v-3c3dc65a="" size="14" class="mr-2">mdi-chart-line</v-icon> Dashboard
    </v-tab>
  </v-tabs><!-- Scroll left arrow --><button data-v-3c3dc65a="" class="scroll-arrow" style="display: none;">
    <v-icon data-v-3c3dc65a="" size="12">mdi-chevron-left</v-icon>
  </button><!-- Onglets (scrollable) -->
  <div data-v-3c3dc65a="" class="scroll-container">
    <!-- Onglets fichiers -->
    <!-- Groupe agent — envelope pill wrapping pill-header + sub-chips -->
  </div><!-- Scroll right arrow --><button data-v-3c3dc65a="" class="scroll-arrow" style="display: none;">
    <v-icon data-v-3c3dc65a="" size="12">mdi-chevron-right</v-icon>
  </button>
</div>
<!-- Menu contextuel groupe d'onglets -->
<!--v-if-->"
`;

exports[`TabBar — snapshots > matches snapshot: tab bar with one terminal tab 1`] = `
"<div data-v-3c3dc65a="" class="tabbar">
  <!-- Fixed tabs: Backlog + Dashboard — MD3 Secondary Tabs with Vuetify ripple -->
  <v-tabs data-v-3c3dc65a="" density="compact" height="48" color="primary" class="tabbar-fixed-tabs">
    <v-tab data-v-3c3dc65a="" value="backlog">
      <v-icon data-v-3c3dc65a="" size="14" class="mr-2">mdi-view-list</v-icon> Backlog
    </v-tab>
    <v-tab data-v-3c3dc65a="" value="dashboard">
      <v-icon data-v-3c3dc65a="" size="14" class="mr-2">mdi-chart-line</v-icon> Dashboard
    </v-tab>
  </v-tabs><!-- Scroll left arrow --><button data-v-3c3dc65a="" class="scroll-arrow" style="display: none;">
    <v-icon data-v-3c3dc65a="" size="12">mdi-chevron-left</v-icon>
  </button><!-- Onglets (scrollable) -->
  <div data-v-3c3dc65a="" class="scroll-container">
    <!-- Onglets fichiers -->
    <!-- Groupe agent — envelope pill wrapping pill-header + sub-chips -->
    <div data-v-3c3dc65a="" class="tab-group" style="border: 1.5px solid rgba(255, 224, 130, 0.45); background: rgba(255, 224, 130, 0.12);">
      <!-- Pill header (identité de l'agent) --><button data-v-3c3dc65a="" class="tab-agent" style="color: rgb(0, 0, 0); background-color: rgb(255, 224, 130);">
        <v-icon data-v-3c3dc65a="" size="11" style="flex-shrink: 0;">mdi-console</v-icon><span data-v-3c3dc65a="" class="tab-agent-name">dev-front</span>
        <v-icon data-v-3c3dc65a="" class="tab-chevron" style="transform: rotate(-90deg);" size="10">mdi-chevron-down</v-icon>
        <!--v-if-->
      </button><!-- Sub-chips session (masqués si groupe collapsé) --><button data-v-3c3dc65a="" class="tab-sub tab-sub--active" style="background-color: rgb(255, 224, 130); color: rgb(0, 0, 0);" title="#1"><span data-v-3c3dc65a="" class="tab-sub-label">#1</span>
        <!--v-if--><span data-v-3c3dc65a="" class="tab-close text-label-medium" title="Fermer">✕</span>
      </button>
    </div>
  </div><!-- Scroll right arrow --><button data-v-3c3dc65a="" class="scroll-arrow" style="display: none;">
    <v-icon data-v-3c3dc65a="" size="12">mdi-chevron-right</v-icon>
  </button>
</div>
<!-- Menu contextuel groupe d'onglets -->
<!--v-if-->"
`;

exports[`TaskCard — snapshots > matches snapshot: critical in_progress task with all badges 1`] = `
"<v-card data-v-8da3d041="" class="task-card" variant="flat" ripple="false" draggable="true" style="background-color: var(--surface-secondary); border: 1px solid var(--edge-default); border-radius: var(--shape-md);">
  <!-- Card body: unified section with consistent gap between zones -->
  <v-card-text data-v-8da3d041="" class="card-body pa-4 pb-0">
    <!-- Top row: title + effort/priority badges -->
    <div data-v-8da3d041="" class="card-top ga-2">
      <div data-v-8da3d041="" class="card-title-area">
        <p data-v-8da3d041="" class="card-title text-body-2">Urgent Fix</p>
      </div>
      <div data-v-8da3d041="" class="card-badge-row ga-1">
        <!--v-if-->
        <v-chip data-v-8da3d041="" size="x-small" variant="tonal" color="chip-priority-critical">!!</v-chip>
        <!--v-if-->
        <!--v-if-->
        <v-chip data-v-8da3d041="" size="x-small" variant="tonal" color="chip-effort-l">L</v-chip>
      </div>
    </div><!-- Badges: perimeter + agent avatars -->
    <div data-v-8da3d041="" class="card-meta mt-3">
      <v-chip data-v-8da3d041="" size="x-small" variant="tonal" rounded="sm" style="color: rgb(0, 77, 64); background-color: rgb(128, 203, 196);">back-electron</v-chip><!-- Multi-agent avatars (≤3 + overflow badge) -->
      <!-- Fallback: single agent badge when no task_agents rows -->
      <agent-badge-stub data-v-8da3d041="" name="dev-back" active="false"></agent-badge-stub>
    </div><!-- Description excerpt: up to 2 lines, fills body to balance footer -->
    <p data-v-8da3d041="" class="card-description text-body-2 mt-3">Description</p>
  </v-card-text><!-- Footer: dates left, #id right -->
  <v-card-text data-v-8da3d041="" class="card-footer-section mt-auto card-footer-bordered">
    <div data-v-8da3d041="" class="card-footer ga-2">
      <div data-v-8da3d041="" class="card-dates">
        <p data-v-8da3d041="" class="card-date text-caption">
          <v-icon data-v-8da3d041="" size="10">mdi-clock-plus-outline</v-icon> 01/01/26 00:00
        </p>
        <p data-v-8da3d041="" class="card-date text-caption">
          <v-icon data-v-8da3d041="" size="10">mdi-clock-edit-outline</v-icon> 01/01/26 00:00
        </p>
      </div><span data-v-8da3d041="" class="card-id">#42</span>
    </div>
  </v-card-text>
</v-card>
<!--v-if-->"
`;

exports[`TaskCard — snapshots > matches snapshot: done task without agent or perimetre 1`] = `
"<v-card data-v-8da3d041="" class="task-card" variant="flat" ripple="false" draggable="false" style="background-color: var(--surface-secondary); border: 1px solid var(--edge-default); border-radius: var(--shape-md);">
  <!-- Card body: unified section with consistent gap between zones -->
  <v-card-text data-v-8da3d041="" class="card-body pa-4 pb-0">
    <!-- Top row: title + effort/priority badges -->
    <div data-v-8da3d041="" class="card-top ga-2">
      <div data-v-8da3d041="" class="card-title-area">
        <p data-v-8da3d041="" class="card-title text-body-2">Completed Task</p>
      </div>
      <div data-v-8da3d041="" class="card-badge-row ga-1">
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
    </div><!-- Badges: perimeter + agent avatars -->
    <!--v-if-->
    <!-- Description excerpt: up to 2 lines, fills body to balance footer -->
    <p data-v-8da3d041="" class="card-description text-body-2 mt-3">Description</p>
  </v-card-text><!-- Footer: dates left, #id right -->
  <v-card-text data-v-8da3d041="" class="card-footer-section mt-auto">
    <div data-v-8da3d041="" class="card-footer ga-2">
      <div data-v-8da3d041="" class="card-dates">
        <p data-v-8da3d041="" class="card-date text-caption">
          <v-icon data-v-8da3d041="" size="10">mdi-clock-plus-outline</v-icon> 01/01/26 00:00
        </p>
        <p data-v-8da3d041="" class="card-date text-caption">
          <v-icon data-v-8da3d041="" size="10">mdi-clock-edit-outline</v-icon> 01/01/26 00:00
        </p>
      </div><span data-v-8da3d041="" class="card-id">#99</span>
    </div>
  </v-card-text>
</v-card>
<!--v-if-->"
`;

exports[`TaskCard — snapshots > matches snapshot: minimal todo task 1`] = `
"<v-card data-v-8da3d041="" class="task-card" variant="flat" ripple="false" draggable="true" style="background-color: var(--surface-secondary); border: 1px solid var(--edge-default); border-radius: var(--shape-md);">
  <!-- Card body: unified section with consistent gap between zones -->
  <v-card-text data-v-8da3d041="" class="card-body pa-4 pb-0">
    <!-- Top row: title + effort/priority badges -->
    <div data-v-8da3d041="" class="card-top ga-2">
      <div data-v-8da3d041="" class="card-title-area">
        <p data-v-8da3d041="" class="card-title text-body-2">Simple Task</p>
      </div>
      <div data-v-8da3d041="" class="card-badge-row ga-1">
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <v-chip data-v-8da3d041="" size="x-small" variant="tonal" color="default">—</v-chip>
        <v-chip data-v-8da3d041="" size="x-small" variant="tonal" color="chip-effort-s">S</v-chip>
      </div>
    </div><!-- Badges: perimeter + agent avatars -->
    <div data-v-8da3d041="" class="card-meta mt-3">
      <v-chip data-v-8da3d041="" size="x-small" variant="tonal" rounded="sm" style="color: rgb(0, 0, 0); background-color: rgb(255, 224, 130);">front-vuejs</v-chip><!-- Multi-agent avatars (≤3 + overflow badge) -->
      <!-- Fallback: single agent badge when no task_agents rows -->
      <agent-badge-stub data-v-8da3d041="" name="dev-front" active="false"></agent-badge-stub>
    </div><!-- Description excerpt: up to 2 lines, fills body to balance footer -->
    <p data-v-8da3d041="" class="card-description text-body-2 mt-3">Description</p>
  </v-card-text><!-- Footer: dates left, #id right -->
  <v-card-text data-v-8da3d041="" class="card-footer-section mt-auto card-footer-bordered">
    <div data-v-8da3d041="" class="card-footer ga-2">
      <div data-v-8da3d041="" class="card-dates">
        <p data-v-8da3d041="" class="card-date text-caption">
          <v-icon data-v-8da3d041="" size="10">mdi-clock-plus-outline</v-icon> 01/01/26 00:00
        </p>
        <p data-v-8da3d041="" class="card-date text-caption">
          <v-icon data-v-8da3d041="" size="10">mdi-clock-edit-outline</v-icon> 01/01/26 00:00
        </p>
      </div><span data-v-8da3d041="" class="card-id">#10</span>
    </div>
  </v-card-text>
</v-card>
<!--v-if-->"
`;

exports[`TitleBar — snapshots > matches snapshot: maximized 1`] = `
"<!-- elevation="0" flat desktop look; height="48" = MD3 compact app bar.
       All controls in default slot (not named slots) so shallowMount renders them correctly.
       -webkit-app-region: drag is applied to the inner div (not v-app-bar) to avoid
       the Electron 41 Windows issue where a position:fixed element with right:0 and
       drag causes the OS to treat the full right window border as a drag zone, blocking
       native resize. The static inner div correctly scopes the drag region to the
       visible 48px title bar area only. -->
<v-app-bar data-v-f5fc7a66="" elevation="0" height="48" color="surface" class="titlebar">
  <div data-v-f5fc7a66="" class="titlebar-content">
    <!-- Left: App identity -->
    <div data-v-f5fc7a66="" class="titlebar-left">
      <div data-v-f5fc7a66="" class="titlebar-dot"></div><span data-v-f5fc7a66="" class="titlebar-name text-label-medium">KanbAgent</span>
    </div><!-- Center: Search bar (always visible, VS Code style) -->
    <div data-v-f5fc7a66="" class="titlebar-center"><button data-v-f5fc7a66="" class="search-btn" title="Rechercher une tâche (Ctrl+K)">
        <v-icon data-v-f5fc7a66="" size="18">mdi-magnify</v-icon><span data-v-f5fc7a66="" class="search-text text-caption">Rechercher…</span><kbd data-v-f5fc7a66="" class="search-kbd">Ctrl+K</kbd>
      </button></div><!-- Right: Window controls — Windows 11 style -->
    <div data-v-f5fc7a66="" class="titlebar-controls">
      <!-- Minimize --><button data-v-f5fc7a66="" class="win-btn" title="Minimiser"><svg data-v-f5fc7a66="" width="10" height="10" viewBox="0 0 10 10" fill="currentColor">
          <rect data-v-f5fc7a66="" x="0" y="4.5" width="10" height="1"></rect>
        </svg></button><!-- Maximize / Restore --><button data-v-f5fc7a66="" class="win-btn" title="Restaurer"><svg data-v-f5fc7a66="" width="11" height="11" viewBox="0 0 11 11" fill="none" stroke="currentColor" stroke-width="1">
          <rect data-v-f5fc7a66="" x="3.5" y="0.5" width="7" height="7" rx="0.5"></rect>
          <path data-v-f5fc7a66="" d="M0.5 3.5v7h7v-3"></path>
        </svg></button><!-- Close --><button data-v-f5fc7a66="" class="win-btn win-btn--close" title="Fermer"><svg data-v-f5fc7a66="" width="10" height="10" viewBox="0 0 10 10" stroke="currentColor" stroke-width="1.1" stroke-linecap="round">
          <line data-v-f5fc7a66="" x1="0.5" y1="0.5" x2="9.5" y2="9.5"></line>
          <line data-v-f5fc7a66="" x1="9.5" y1="0.5" x2="0.5" y2="9.5"></line>
        </svg></button>
    </div>
  </div>
</v-app-bar>"
`;

exports[`TitleBar — snapshots > matches snapshot: not maximized 1`] = `
"<!-- elevation="0" flat desktop look; height="48" = MD3 compact app bar.
       All controls in default slot (not named slots) so shallowMount renders them correctly.
       -webkit-app-region: drag is applied to the inner div (not v-app-bar) to avoid
       the Electron 41 Windows issue where a position:fixed element with right:0 and
       drag causes the OS to treat the full right window border as a drag zone, blocking
       native resize. The static inner div correctly scopes the drag region to the
       visible 48px title bar area only. -->
<v-app-bar data-v-f5fc7a66="" elevation="0" height="48" color="surface" class="titlebar">
  <div data-v-f5fc7a66="" class="titlebar-content">
    <!-- Left: App identity -->
    <div data-v-f5fc7a66="" class="titlebar-left">
      <div data-v-f5fc7a66="" class="titlebar-dot"></div><span data-v-f5fc7a66="" class="titlebar-name text-label-medium">KanbAgent</span>
    </div><!-- Center: Search bar (always visible, VS Code style) -->
    <div data-v-f5fc7a66="" class="titlebar-center"><button data-v-f5fc7a66="" class="search-btn" title="Rechercher une tâche (Ctrl+K)">
        <v-icon data-v-f5fc7a66="" size="18">mdi-magnify</v-icon><span data-v-f5fc7a66="" class="search-text text-caption">Rechercher…</span><kbd data-v-f5fc7a66="" class="search-kbd">Ctrl+K</kbd>
      </button></div><!-- Right: Window controls — Windows 11 style -->
    <div data-v-f5fc7a66="" class="titlebar-controls">
      <!-- Minimize --><button data-v-f5fc7a66="" class="win-btn" title="Minimiser"><svg data-v-f5fc7a66="" width="10" height="10" viewBox="0 0 10 10" fill="currentColor">
          <rect data-v-f5fc7a66="" x="0" y="4.5" width="10" height="1"></rect>
        </svg></button><!-- Maximize / Restore --><button data-v-f5fc7a66="" class="win-btn" title="Agrandir"><svg data-v-f5fc7a66="" width="10" height="10" viewBox="0 0 10 10" fill="none" stroke="currentColor" stroke-width="1">
          <rect data-v-f5fc7a66="" x="0.5" y="0.5" width="9" height="9" rx="0.5"></rect>
        </svg></button><!-- Close --><button data-v-f5fc7a66="" class="win-btn win-btn--close" title="Fermer"><svg data-v-f5fc7a66="" width="10" height="10" viewBox="0 0 10 10" stroke="currentColor" stroke-width="1.1" stroke-linecap="round">
          <line data-v-f5fc7a66="" x1="0.5" y1="0.5" x2="9.5" y2="9.5"></line>
          <line data-v-f5fc7a66="" x1="9.5" y1="0.5" x2="0.5" y2="9.5"></line>
        </svg></button>
    </div>
  </div>
</v-app-bar>"
`;

exports[`ToastContainer — snapshots > matches snapshot: empty (no toasts) 1`] = `""`;

exports[`ToastContainer — snapshots > matches snapshot: three toast types (error, warn, info) 1`] = `
"<v-snackbar model-value="true" color="error" timeout="-1" location="bottom end">Connection failed <v-btn icon="" variant="plain" density="compact">
    <v-icon>mdi-close</v-icon>
  </v-btn>
</v-snackbar>
<v-snackbar model-value="true" color="warning" timeout="-1" location="bottom end">Slow response detected <v-btn icon="" variant="plain" density="compact">
    <v-icon>mdi-close</v-icon>
  </v-btn>
</v-snackbar>
<v-snackbar model-value="true" color="surface-variant" timeout="-1" location="bottom end">Changes saved <v-btn icon="" variant="plain" density="compact">
    <v-icon>mdi-close</v-icon>
  </v-btn>
</v-snackbar>"
`;
